syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string product_name = 1;
  float price = 2;
  float tax = 3;
}

message Order {
  string id = 1;
  string product_name = 2;
  float price = 3;
  float tax = 4;
  float final_price = 5;
}

message ListOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
}

message ListOrdersResponse {
  repeated Order Orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}